[JBTM-3150] LRA quickstart update for using thorntail and latest microprofile-lra
Signed-off-by: mkralik3 <mkralik@redhat.com>